hphp/hack/test/typecheck/is_vec_or_varray/is_vec_or_varray.php.exp
File "is_vec_or_varray.php", line 11, characters 5-17:
Invalid index type for this vec (Typing[4324])
  File "is_vec_or_varray.php", line 11, characters 8-12:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "is_vec_or_varray.php", line 11, characters 8-12:
  But got `string`
File "is_vec_or_varray.php", line 12, characters 16-17:
Invalid argument (Typing[4110])
  File "is_vec_or_varray.php", line 24, characters 21-41:
  Expected `dict<arraykey, mixed>`
  File "is_vec_or_varray.php", line 4, characters 7-25:
  But got `vec<(int | T#1)>` from the argument to this \HH\is_vec_or_varray test
File "is_vec_or_varray.php", line 14, characters 18-19:
Invalid argument (Typing[4110])
  File "is_vec_or_varray.php", line 26, characters 23-45:
  Expected `dict<arraykey, mixed>`
  File "is_vec_or_varray.php", line 4, characters 7-25:
  But got `vec<(int | T#1)>` from the argument to this \HH\is_vec_or_varray test
File "is_vec_or_varray.php", line 18, characters 5-12:
a mixed value does not allow array append (Typing[4006])
  File "is_vec_or_varray.php", line 3, characters 15-19:
  Definition is here
